--- a/infrastruct/ansible/roles/langfuse/templates/docker-compose.yml.j2
+++ b/infrastruct/ansible/roles/langfuse/templates/docker-compose.yml.j2
@@ -13,7 +13,7 @@ services:
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       TELEMETRY_ENABLED: false
       LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES: true
-      AUTH_DISABLE_SIGNUP: true
+      AUTH_DISABLE_SIGNUP: false
       CLICKHOUSE_MIGRATION_URL: clickhouse://clickhouse:9000
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
@@ -61,7 +61,7 @@ services:
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       TELEMETRY_ENABLED: false
       LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES: true
-      AUTH_DISABLE_SIGNUP: true
+      AUTH_DISABLE_SIGNUP: false
       CLICKHOUSE_MIGRATION_URL: clickhouse://clickhouse:9000
       CLICKHOUSE_URL: http://clickhouse:8123
       CLICKHOUSE_USER: ${CLICKHOUSE_USER}
