--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/windmill.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/windmill.nomad.hcl.j2
@@ -1,5 +1,5 @@
 job "windmill" {
-  datacenters = ["dc1"]
+  datacenters = ["{{ nomad_datacenter | default("dc1") }}"]
   type        = "service"
 
   group "windmill" {
