fix: update YouTrack and Obsidian-remote image tags and ports
- YouTrack: Update to valid tag 2024.1.25893
- Obsidian-remote: Update to public linuxserver/obsidian image and port 3000

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/obsidian-remote.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/obsidian-remote.nomad.hcl.j2
@@ -7,7 +7,7 @@ job "obsidian-remote" {
 
     network {
       port "http" {
-        to = 8080
+        to = 3000
       }
     }
 
@@ -20,7 +20,7 @@ job "obsidian-remote" {
       }
 
       config {
-        image = "ghcr.io/sglmr/obsidian-remote:latest"
+        image = "ghcr.io/linuxserver/obsidian:latest"
         ports = ["http"]
         volumes = [
            "/opt/obsidian/config:/config",
