--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/obsidian-remote.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/obsidian-remote.nomad.hcl.j2
@@ -39,7 +39,9 @@ job "obsidian-remote" {
         tags = [
           "traefik.enable=true",
           "traefik.http.routers.obsidian.rule=Host(`obsidian.{{ public_ip | default(ansible_default_ipv4.address) }}.nip.io`) || PathPrefix(`/obsidian`)",
-          "traefik.http.routers.obsidian.entrypoints=web"
+          "traefik.http.routers.obsidian.entrypoints=web",
+          "traefik.http.routers.obsidian.middlewares=obsidian-auth",
+          "traefik.http.middlewares.obsidian-auth.basicauth.users=admin:$apr1$Mi4gkYqu$FiYyqRFQ/8aSMSkZqHMgr/"
         ]
         check {
           name     = "alive"
