feat(ansible): set FPS to 0.5 (1 frame per 2 seconds) for minimal disk usage

--- a/infrastruct/ansible/roles/obs-studio/templates/basic.ini.j2
+++ b/infrastruct/ansible/roles/obs-studio/templates/basic.ini.j2
@@ -84,11 +84,11 @@ BaseCX={{ obs_canvas.width }}
 BaseCY={{ obs_canvas.height }}
 OutputCX={{ obs_output.width }}
 OutputCY={{ obs_output.height }}
-FPSType=0
-FPSCommon={{ obs_fps }}
-FPSInt={{ obs_fps }}
-FPSNum={{ obs_fps }}
-FPSDen=1
+FPSType=2
+FPSCommon=30
+FPSInt=30
+FPSNum={{ obs_fps_num }}
+FPSDen={{ obs_fps_den }}
 ScaleType=bilinear
 ColorFormat=NV12
 ColorSpace=709
