fix(rsrch): use host volume for auth.json and simplify CI

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
@@ -18,32 +18,24 @@ job "rsrch" {
       config {
         image = "ghcr.io/{{ github_repository | default('simik394/osobni_wf') }}/rsrch:latest"
         ports = ["http"]
+        mounts = [
+          {
+            type     = "bind"
+            target   = "/secrets/auth.json"
+            source   = "/opt/rsrch/secrets/auth.json"
+            readonly = true
+          }
+        ]
       }
 
       env {
         PORT = "3000"
-        # Connect to the browser agent via Consul DNS
-        # Assuming rsrch-browser registers a service named 'rsrch-browser' with tag 'browser'
-        # or checks 'rsrch-browser.service.consul'
         BROWSER_CDP_ENDPOINT = "http://rsrch-browser.service.consul:9223"
         AUTH_FILE = "/secrets/auth.json"
-        
-        # Disable local browser launch
         HEADLESS = "true" 
-        
-        # Logging
         DEBUG = "rsrch:*"
       }
 
-      # Template to inject auth.json from Nomad variable
-      template {
-        data = <<EOF
-{{ env "NOMAD_VAR_rsrch_auth_json" }}
-EOF
-        destination = "/secrets/auth.json"
-        env         = false
-        change_mode = "restart"
-      }
 
       # Resources
       resources {
