feat(rsrch): fix CI workflow and update infrastructure configs

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
@@ -1,5 +1,5 @@
 job "rsrch" {
-  datacenters = ["{{ nomad_datacenter | default("dc1") }}"]
+  datacenters = ["oci-eu"]
   type        = "service"
 
   group "server" {
