fix(nomad): optimize resource usage to prevent exhaustion
- Reduced YouTrack CPU request to 1000 MHz
- Reduced Memgraph CPU request to 800 MHz (restored service def)
- Reduced Windmill tasks CPU requests (saving 600 MHz)
- Fixed missing Memgraph service definition

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/memgraph.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/memgraph.nomad.hcl.j2
@@ -41,6 +41,22 @@ job "memgraph" {
         MEMGRAPH_USER      = "memgraph"
         MEMGRAPH_PASSWORD  = "memgraph" 
       }
+
+      resources {
+        cpu    = 800
+        memory = 2048
+      }
+
+      service {
+        name = "memgraph"
+        port = "bolt"
+        check {
+          name     = "bolt-alive"
+          type     = "tcp"
+          interval = "10s"
+          timeout  = "2s"
+        }
+      }
     }
 
     # Memgraph Lab (Web UI for visualization and queries)
