--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/memgraph.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/memgraph.nomad.hcl.j2
@@ -8,7 +8,8 @@ job "memgraph" {
     network {
       mode = "bridge"
       port "bolt" {
-        to = 7687
+        static = 7687
+        to     = 7687
       }
       port "lab" {
         to = 3000
