docs: update LESSONS_LEARNED with YouTrack API insights
- Added lesson on explicit $type for polymorphic resources
- Added lesson on Prolog set deduplication with list_to_set/2

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/angrav-browser.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/angrav-browser.nomad.hcl.j2
@@ -46,7 +46,7 @@ job "angrav-browser" {
       service {
         name = "angrav-browser-cdp"
         port = 9224
-        address_mode = "driver"
+        address_mode = "host"
         tags = ["browser", "cdp", "angrav"]
         
         check {
@@ -54,7 +54,7 @@ job "angrav-browser" {
           type         = "http"
           path         = "/json/version"
           port         = 9224
-          address_mode = "driver"
+          address_mode = "host"
           interval     = "10s"
           timeout      = "5s"
         }
