--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch-browser.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch-browser.nomad.hcl.j2
@@ -80,14 +80,14 @@ job "rsrch-browser" {
       service {
         name         = "rsrch-browser-cdp"
         port         = 9223
-        address_mode = "driver"
+        address_mode = "host"
         tags         = ["browser", "cdp", "rsrch"]
         
         check {
           name         = "cdp-health"
           type         = "http"
           path         = "/json/version"
-          address_mode = "driver"
+          address_mode = "host"
           interval     = "30s"
           timeout      = "10s"
         }
